--- a/WorkSem03/src/main/resources/static/index.html
+++ b/WorkSem03/src/main/resources/static/index.html
@@ -2,11 +2,75 @@
 
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Dog Friendly</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/style.css" rel="stylesheet" type="text/css"/>
+        <link href="css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div>TODO write content</div>
+        <h1><a href="index.html" >Dog Friendly</a></h1>
+        <header class="header">
+            <nav>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="pag6.html">Adopta</a></li>
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="pag2.html">Alimentos</a></li>
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="pag3.html">Farmacia</a></li>
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="pag4.html">Juguetes</a></li>
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="pag5.html">Snacks y Suplementos</a></li>
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="pag7.html">Donativos</a></li>
+                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="pag8.html">Contactos</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="contenido-p">
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <article id="card-prin">
+                <br/>
+                <br/>
+                <h2>Quienes Somos</h2>
+                <br/>                
+                <article>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, iaculis dis libero viverra venenatis aliquam et ut, felis phasellus in lectus primis porta. Praesent sagittis iaculis nisl odio neque metus varius non viverra, per pharetra dignissim mattis ut vel aenean magna et, lobortis phasellus hendrerit sociis sollicitudin vehicula auctor suscipit. Morbi senectus dignissim enim fermentum praesent quisque per mus, libero primis himenaeos integer habitasse lacinia nisi viverra suspendisse, phasellus nisl natoque conubia tortor malesuada condimentum.</p>
+                    <br/>
+                    <br/>                    
+                    <figure>
+                        <img src="imagenes/dogfriendly.png" alt=""/>
+                    </figure>
+                </article>
+                <br/>
+                <br/>
+                <h2>Porque adoptar un perro</h2>
+                <br/>                
+                <article>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, iaculis dis libero viverra venenatis aliquam et ut, felis phasellus in lectus primis porta. Praesent sagittis iaculis nisl odio neque metus varius non viverra, per pharetra dignissim mattis ut vel aenean magna et, lobortis phasellus hendrerit sociis sollicitudin vehicula auctor suscipit. Morbi senectus dignissim enim fermentum praesent quisque per mus, libero primis himenaeos integer habitasse lacinia nisi viverra suspendisse, phasellus nisl natoque conubia tortor malesuada condimentum.</p>
+                    <br/>
+                    <br/>
+                    <figure>
+                        <img src="imagenes/int1.jpg" alt=""/>
+                    </figure>
+                </article>
+                <br/>
+                <br/>
+                <h2>Como los cuidamos</h2>
+                <br/>                
+                <article>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, iaculis dis libero viverra venenatis aliquam et ut, felis phasellus in lectus primis porta. Praesent sagittis iaculis nisl odio neque metus varius non viverra, per pharetra dignissim mattis ut vel aenean magna et, lobortis phasellus hendrerit sociis sollicitudin vehicula auctor suscipit. Morbi senectus dignissim enim fermentum praesent quisque per mus, libero primis himenaeos integer habitasse lacinia nisi viverra suspendisse, phasellus nisl natoque conubia tortor malesuada condimentum.</p>
+                    <br/>
+                    <br/>                    
+                    <figure>
+                        <img src="imagenes/int2.jpg" alt=""/>
+                    </figure>
+                </article>
+                <br/>
+                <br/>
+            </article>
+            <br/>
+            <br/>            
+        </section>
+        <footer class="piePagina">Derechos Reservados &COPY; 2023 <address>Santa Ana, Rio Oro</address><address> TEL:8452-6495</address></footer>
     </body>
 </html>
