--- a/WorkSem03/src/main/resources/static/index.html
+++ b/WorkSem03/src/main/resources/static/index.html
@@ -44,15 +44,16 @@
                 <br/>
                 <br/>
                 <h2>Porque adoptar un perro</h2>
-                <br/>                
+                <br/>            
                 <article>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, iaculis dis libero viverra venenatis aliquam et ut, felis phasellus in lectus primis porta. Praesent sagittis iaculis nisl odio neque metus varius non viverra, per pharetra dignissim mattis ut vel aenean magna et, lobortis phasellus hendrerit sociis sollicitudin vehicula auctor suscipit. Morbi senectus dignissim enim fermentum praesent quisque per mus, libero primis himenaeos integer habitasse lacinia nisi viverra suspendisse, phasellus nisl natoque conubia tortor malesuada condimentum.</p>
-                    <br/>
-                    <br/>
-                    <figure>
-                        <img src="imagenes/int1.jpg" alt=""/>
-                    </figure>
+                    <br/>                   
                 </article>
+                <figure>
+                    <video autoplay="autoplay" loop="loop" muted defaultMuted playsinline  oncontextmenu="return false;"  preload="auto" width="620" height="540" >
+                        <source src="video/adopta.mp4" type="video/mp4" >
+                    </video>                    
+                </figure>
                 <br/>
                 <br/>
                 <h2>Como los cuidamos</h2>
@@ -67,6 +68,19 @@
                 </article>
                 <br/>
                 <br/>
+                <h2>Nuestras instalaciones</h2>
+                <br/>
+                <br/>                
+                <header><h3>Residencia DogFriendly</h3></header>
+                <iframe 
+                    width="800px"
+                    height="500px"
+                    src="https://www.youtube.com/embed/biX05iok-g8"
+                    title="Instalaciones para Residencia Canina 🐶 🐕  ¡Diseño a medida! 🏢"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+                <footer>Video de ejemplo</footer>
             </article>
             <br/>
             <br/>            
